@@ -1,3 +1,8 @@
+2025-07-17  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el (+sh-mode-h): New function.  Add to `sh-mode-hook'.
+	(hack-local-variables-hook): Fix typo.
+
 2025-07-16  Zhengyi Fu  <i@fuzy.me>
 
 	* site-lisp/tencent-cos.el: Rename tencent-cloud to
